crates/jarl-core/src/lints/testthat/expect_match/snapshots/jarl_core__lints__testthat__expect_match__tests__fix_output.snap
---
source: crates/jarl-core/src/lints/testthat/expect_match/mod.rs
expression: "get_fixed_text(vec![\"expect_true(grepl('fun', 'Testing is fun'))\",\n\"testthat::expect_true(grepl('fun', 'Testing is fun'))\",\n\"expect_true(grepl(pattern = 'fun', x = 'Testing is fun'))\",\n\"expect_true(grepl(x = 'Testing is fun', perl = TRUE, pattern = 'fun'))\",\n\"expect_true(grepl('fun', 'Testing is fun', perl = TRUE, fixed = FALSE))\",],\n\"expect_match\", None,)"
---
OLD:
====
expect_true(grepl('fun', 'Testing is fun'))
NEW:
====
expect_match('Testing is fun', 'fun')

OLD:
====
testthat::expect_true(grepl('fun', 'Testing is fun'))
NEW:
====
testthat::expect_match('Testing is fun', 'fun')

OLD:
====
expect_true(grepl(pattern = 'fun', x = 'Testing is fun'))
NEW:
====
expect_match('Testing is fun', 'fun')

OLD:
====
expect_true(grepl(x = 'Testing is fun', perl = TRUE, pattern = 'fun'))
NEW:
====
expect_match('Testing is fun', 'fun', perl = TRUE)

OLD:
====
expect_true(grepl('fun', 'Testing is fun', perl = TRUE, fixed = FALSE))
NEW:
====
expect_match('Testing is fun', 'fun', perl = TRUE, fixed = FALSE)
