crates/jarl-core/src/lints/testthat/expect_match/snapshots/jarl_core__lints__testthat__expect_match__tests__no_fix_extra_args.snap
---
source: crates/jarl-core/src/lints/testthat/expect_match/mod.rs
expression: "get_fixed_text(vec![\"expect_true(grepl('fun', 'Testing is fun'), info = 'msg')\",\n\"expect_true(grepl('fun', 'Testing is fun', FALSE, FALSE, FALSE, FALSE))\",],\n\"expect_match\", None,)"
---
OLD:
====
expect_true(grepl('fun', 'Testing is fun'), info = 'msg')
NEW:
====
expect_true(grepl('fun', 'Testing is fun'), info = 'msg')

OLD:
====
expect_true(grepl('fun', 'Testing is fun', FALSE, FALSE, FALSE, FALSE))
NEW:
====
expect_true(grepl('fun', 'Testing is fun', FALSE, FALSE, FALSE, FALSE))
