crates/jarl-core/src/lints/testthat/expect_match/snapshots/jarl_core__lints__testthat__expect_match__tests__no_fix_with_comments.snap
---
source: crates/jarl-core/src/lints/testthat/expect_match/mod.rs
expression: "get_fixed_text(vec![\"expect_true(grepl(# comment\\n'fun', 'Testing is fun'))\",],\n\"expect_match\", None,)"
---
OLD:
====
expect_true(grepl(# comment
'fun', 'Testing is fun'))
NEW:
====
expect_true(grepl(# comment
'fun', 'Testing is fun'))
